# whisper_normalizer

./: .gitignore  1a.langinfo.html  1b.indic_normalizer.html  AGENTS.md  CHANGELOG.bak  CHANGELOG.md  Dockerfile  MANIFEST.in  Pipfile  README.md  SECURITY.md  app.py  app2.py  basic.html  english.html  humans.txt  index.html  ml_norm.tsv  ml_test.py  pyproject.toml  requirements.txt  robots.txt  search.json  settings.ini  sitemap.xml
.github/: FUNDING.yml
.github/workflows/: deploy.yaml  test.yaml
_proc/: 00_basic.ipynb  00_core.ipynb  01_english.ipynb  index.ipynb
examples/: hello_world_whisper_normalizer.ipynb
examples/sample_webapp/: Dockerfile  requirements.txt
nbs/: 00_basic.ipynb  01_english.ipynb  02_international.ipynb  03_evaluation.ipynb  03_malayalam.ipynb  03_multilingual.ipynb  1A.langinfo.ipynb  1B.indic_normalizer.ipynb  1a.langinfo.ipynb  1b.indic_normalizer.ipynb  index.ipynb  nbdev.yml  sidebar.yml
site_libs/bootstrap/: bootstrap-0c9eb0277ab99f059f9e902403bd7a3d.min.css  bootstrap-b38bfc58f0732c5acf3d85c920ebea91.min.css
site_libs/quarto-nav/: quarto-nav.js
whisper_normalizer/: _modidx.py  basic.py  english.py  evaluation.py  indic.py  indic_normalizer.py  international.py  langinfo.py  malayalam.py  ml_norm.tsv  ml_test.py  multilingual.py
